feat: tauri scaffolding

--- a/rust/src/index.html
+++ b/rust/src/index.html
@@ -58,18 +58,18 @@
 
   <div class="flex flex-col gap-4 mt-4 mb-6 md:mx-10 mx-4">
 
-    <div class="card">Hello, I'm a card.</div>
-    <div class="card">Hello, I'm a card.</div>
-    <div class="card">Hello, I'm a card.</div>
-    <div class="card">Hello, I'm a card.</div>
-    <div class="card">Hello, I'm a card.</div>
-    <div class="card">Hello, I'm a card.</div>
-    <div class="card">Hello, I'm a card.</div>
-    <div class="card">Hello, I'm a card.</div>
-    <div class="card">Hello, I'm a card.</div>
-    <div class="card">Hello, I'm a card.</div>
-    <div class="card">Hello, I'm a card.</div>
-    <div class="card">Hello, I'm a card.</div>
+    <div class="card">benene</div>
+    <div class="card">owenge</div>
+    <div class="card">deez</div>
+    <div class="card">peanuts</div>
+    <div class="card">sour cream</div>
+    <div class="card">paprika</div>
+    <div class="card">pineapple</div>
+    <div class="card">corn</div>
+    <div class="card">flour</div>
+    <div class="card">eggs</div>
+    <div class="card">tomato</div>
+    <div class="card">garlic</div>
   </div>
 
 
