--- a/rust/src/index.html
+++ b/rust/src/index.html
@@ -54,7 +54,23 @@
         duration-500
       ">search</button>
     </div>
+
+    <div class="
+    absolute right-7 top-6 w-12 h-12
+        bg-slate-100 dark:bg-slate-800
+        border-slate-300 dark:border-slate-700
+        shadow-sm dark:shadow-slate-700/40
+        rounded-full
+        border border-b-2
+        flex justify-center
+    ">
+      <svg class="stroke-lime-500 dark:stroke-lime-400 fill-current w-8" xmlns="http://www.w3.org/2000/svg" fill="none"
+        viewBox="0 0 24 24" stroke-width="1.5">
+        <path stroke-linecap="round" stroke-linejoin="round" d="M12 4.5v15m7.5-7.5h-15" />
+      </svg>
+    </div>
   </div>
+
 
   <div class="flex flex-col gap-4 mt-4 mb-6 md:mx-10 mx-4">
 
