feat: add chiplets for ingredient recognition

--- a/rust/src/index.html
+++ b/rust/src/index.html
@@ -144,7 +144,8 @@
       </div>
 
     </div>
-    <div id="chiplets" class="h-10 flex dark:text-white">
+    <div id="chiplets" class="flex dark:text-white px-6 py-4 gap-4">
+      <div class="chiplet">ingredients</div>
     </div>
 
     <textarea id="recipe-instructions"
