feat(ui): scrollable ingredient labels

--- a/rust/src/index.html
+++ b/rust/src/index.html
@@ -106,8 +106,8 @@
         text-xl font-medium
         border-slate-300 dark:border-slate-700
         focus:outline-none outline-none
-        text-slate-800 dark:text-slate-300
-        " placeholder="Name your recipe ..."></input>
+        text-slate-800 dark:text-slate-300"
+        id="recipe-name" placeholder="Name your recipe ..."></input>
 
       <div id="discard-icon" class="
         w-12 h-12
@@ -144,7 +144,7 @@
       </div>
 
     </div>
-    <div id="chiplets" class="flex dark:text-white px-6 py-4 gap-4">
+    <div id="chiplets" class="flex dark:text-white px-6 py-4 gap-4 overflow-x-auto">
       <div class="chiplet">ingredients</div>
     </div>
 
