--- a/rust/src/index.html
+++ b/rust/src/index.html
@@ -37,7 +37,7 @@
         duration-500
         gap-5
       ">
-        <input type="text" class="
+        <input id="search" type="text" class="
         py-2 px-6 flex-1
         bg-slate-100 dark:bg-slate-800
         border-slate-300 dark:border-slate-700
@@ -77,21 +77,7 @@
     </div>
 
 
-    <div class="flex flex-col gap-4 mt-4 mb-6 md:mx-10 mx-4">
-
-      <div class="card">benene</div>
-      <div class="card">owenge</div>
-      <div class="card">deez</div>
-      <div class="card">peanuts</div>
-      <div class="card">sour cream</div>
-      <div class="card">paprika</div>
-      <div class="card">pineapple</div>
-      <div class="card">corn</div>
-      <div class="card">flour</div>
-      <div class="card">eggs</div>
-      <div class="card">tomato</div>
-      <div class="card">garlic</div>
-    </div>
+    <div id="ingredients" class="flex flex-col gap-4 mt-4 mb-6 md:mx-10 mx-4"></div>
   </div>
 
   <div id="edit-page" class="h-full w-full m-fadeOut absolute top-0 flex flex-col">
@@ -106,8 +92,7 @@
         text-xl font-medium
         border-slate-300 dark:border-slate-700
         focus:outline-none outline-none
-        text-slate-800 dark:text-slate-300"
-        id="recipe-name" placeholder="Name your recipe ..."></input>
+        text-slate-800 dark:text-slate-300" id="recipe-name" placeholder="Name your recipe ..."></input>
 
       <div id="discard-icon" class="
         w-12 h-12
