fix: live search does not need a button ffs

--- a/rust/src/index.html
+++ b/rust/src/index.html
@@ -44,27 +44,13 @@
         focus:outline-none outline-none
         text-slate-800 dark:text-slate-300
         " placeholder="search ingredients"></input>
-
-        <button class="py-2 px-6
-        md:rounded-full rounded-xl
-        bg-lime-300 dark:bg-lime-500
-        text-lime-700
-        dark:text-lime-800
-        border-lime-400 dark:border-lime-600 border-b-2
-        hover:shadow-md hover:shadow-lime-400/10
-        focus:outline-none outline-none
-        transition-all
-        active:border-b-0 active:border-t-2 duration-100
-      ">search</button>
       </div>
 
       <div id="plus-icon" class="
     absolute right-7 top-6 w-12 h-12
         bg-slate-100 dark:bg-slate-800
         border-slate-300 dark:border-slate-700
-        shadow-sm dark:shadow-slate-700/40
-        rounded-full
-        border border-b-2
+        rounded-full border
         flex justify-center
         active:scale-95 active:border-b duration-100
         transition-all
